objects/Meal__c.object
<CustomObject>
    <fields>
        <fullName>Carbs__c</fullName>
        <label>Carbs</label>
        <summarizedField>MealProduct__c.Carbs__c</summarizedField>
        <summaryForeignKey>MealProduct__c.Meal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fat__c</fullName>
        <label>Fat</label>
        <summarizedField>MealProduct__c.Fat__c</summarizedField>
        <summaryForeignKey>MealProduct__c.Meal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Kcal__c</fullName>
        <description>kcal per gramm</description>
        <label>Kcal</label>
        <summarizedField>MealProduct__c.Kcal__c</summarizedField>
        <summaryForeignKey>MealProduct__c.Meal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Protein__c</fullName>
        <label>Protein</label>
        <summarizedField>MealProduct__c.Protein__c</summarizedField>
        <summaryForeignKey>MealProduct__c.Meal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Meal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>